--- a/package.json
+++ b/package.json
@@ -1,4 +1,20 @@
 {
+  "name": "devburger-api-railway",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "src/server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon",
+    "debug": "nodemon --inspect"
+  },
+  "keywords": [],
+  "author": {
+    "name": "Marcos",
+    "url": "https://github.com/Marcossttg/devburger-api-railway.git"
+  },
+  "license": "ISC",
+  "description": "DevBurger API Railway.",
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -15,21 +31,6 @@
     "yup": "^1.4.0"
   },
   "packageManager": "yarn@1.22.22",
-  "name": "devburger-api",
-  "version": "1.0.0",
-  "main": "src/server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon",
-    "debug": "nodemon --inspect"
-  },
-  "keywords": [],
-  "author": {
-    "name": "Marcos",
-    "url": "https://github.com/Marcossttg"
-  },
-  "license": "ISC",
-  "description": "DevBurger API.",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "eslint": "^7.12.1",
