--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,17 @@
-const { resolve } = require('node:path')
+import { resolve } from 'path';
 
-module.exports = {
-  config: resolve(__dirname, 'src', 'config', 'database.js'),
-  'models-path': resolve(__dirname, 'src', 'app', 'models'),
-  'migrations-path': resolve(__dirname, 'src', 'database', 'migrations'),
-}
+export default {
+  'config': resolve('src/config/database.js'),
+  'migrations-path': resolve('src/database/migrations'),
+  'models-path': resolve('src/database/models'),
+  'seeders-path': resolve('src/database/seeders'),
+};
+
+
+// const { resolve } = require('node:path')
+
+// module.exports = {
+//   config: resolve(__dirname, 'src', 'config', 'database.js'),
+//   'models-path': resolve(__dirname, 'src', 'app', 'models'),
+//   'migrations-path': resolve(__dirname, 'src', 'database', 'migrations'),
+// }
