--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,11 +1,11 @@
-import { resolve } from 'path';
+const { resolve } = require('path');
 
-export default {
-  'config': resolve('src/config/database.js'),
-  'migrations-path': resolve('src/database/migrations'),
-  'models-path': resolve('src/database/models'),
-  'seeders-path': resolve('src/database/seeders'),
+module.exports = {
+  config: resolve(__dirname, 'src', 'config', 'database.js'),
+  'models-path': resolve(__dirname, 'src', 'app', 'models'),
+  'migrations-path': resolve(__dirname, 'src', 'database', 'migrations'),
 };
+
 
 
 // const { resolve } = require('node:path')
