--- a/package.json
+++ b/package.json
@@ -1,7 +1,22 @@
 {
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.3",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3",
+    "uuid": "^9.0.1",
+    "yarn": "^1.22.22",
+    "yup": "^1.4.0"
+  },
+  "packageManager": "yarn@1.22.22",
   "name": "devburger-api-railway",
   "version": "1.0.0",
-  "type": "module",
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,21 +30,6 @@
   },
   "license": "ISC",
   "description": "DevBurger API Railway.",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.3",
-    "multer": "^1.4.5-lts.1",
-    "pg": "^8.12.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.3",
-    "uuid": "^9.0.1",
-    "yarn": "^1.22.22",
-    "yup": "^1.4.0"
-  },
-  "packageManager": "yarn@1.22.22",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "eslint": "^7.12.1",
