--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "printWidth": 80,
+  "semi": false,
+  "singleQuote": true,
   "tabWidth": 2,
-  "singleQuote": false,
   "trailingComma": "all",
-  "arrowParens": "always",
-  "semi": true
+  "printWidth": 80,
+  "arrowParens": "always"
 }
